// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkFormValidation should render correctly 1`] = `
<DocumentFragment>
  <div
    style="height: auto; overflow: visible; transition: height 200ms ease;"
  >
    <div>
      <div
        class="bpk-form-validation__container"
      >
        <div
          class="bpk-form-validation bpk-form-validation--appear"
          id="my-form-validation"
        >
          <span
            style="line-height: .5rem; display: inline-block; margin-top: 0.375rem; vertical-align: top;"
          >
            <svg
              class="bpk-form-validation__icon"
              height="8"
              style="width: .5rem; height: .5rem;"
              viewBox="0 0 16 16"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 1.5A10.5 10.5 0 1 0 22.5 12 10.5 10.5 0 0 0 12 1.5zM12 18a1.5 1.5 0 1 1 1.5-1.5A1.5 1.5 0 0 1 12 18zm1.5-6a1.5 1.5 0 0 1-3 0V7.5a1.5 1.5 0 0 1 3 0z"
              />
            </svg>
          </span>
          A validation message.
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkFormValidation should render correctly with "expanded" equal to false 1`] = `
<DocumentFragment>
  <div
    style="height: 0px; overflow: visible; transition: height 200ms ease;"
  >
    <div
      style="display: none;"
    >
      <div
        class="bpk-form-validation__container"
      >
        <div
          class="bpk-form-validation"
          id="my-form-validation"
        >
          <span
            style="line-height: .5rem; display: inline-block; margin-top: 0.375rem; vertical-align: top;"
          >
            <svg
              class="bpk-form-validation__icon"
              height="8"
              style="width: .5rem; height: .5rem;"
              viewBox="0 0 16 16"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 1.5A10.5 10.5 0 1 0 22.5 12 10.5 10.5 0 0 0 12 1.5zM12 18a1.5 1.5 0 1 1 1.5-1.5A1.5 1.5 0 0 1 12 18zm1.5-6a1.5 1.5 0 0 1-3 0V7.5a1.5 1.5 0 0 1 3 0z"
              />
            </svg>
          </span>
          A validation message.
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
